# scribe

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  scribe.db  start-production.sh  start.sh  stop-production.sh
alembic/: env.py
app/: __init__.py  config.py  database.py  main.py  models.py  scheduler.py
app/api/: deps.py
app/api/routes/: __init__.py  auth.py  events.py  notes.py  search.py  settings.py  web.py
app/models/: __init__.py  note.py  user.py
app/repositories/: note_repository.py  settings_repository.py
app/schemas/: __init__.py  auth.py  note.py  search.py  settings.py
app/services/: __init__.py  auth_service.py  embeddings.py  homeassistant_service.py  llm.py  note_service.py  notifier.py  ollama_service.py  search.py  transcriber.py  transcription_service.py
app/static/css/: styles.css  tokens.css
app/static/js/: theme.js  utils.js
app/tasks/: __init__.py  notification_tasks.py  processing_tasks.py
app/templates/: ask_modal.html  base.html  home.html  login.html  note_detail.html  notes_table.html  register.html  settings.html
app/templates/components/: bulk_actions_toolbar.html  chat_message.html  chat_message_skeleton.html  chat_sources_partial.html  note_card.html  note_modal.html  notes_table_body.html  pagination.html  reminder_badge.html  search_results.html  shimmer.html  (+3 more)
app/utils/: __init__.py  auth.py  datetime.py  events.py  exceptions.py  vector.py
eval/: model_eval.py  model_eval_verbose.py  qwen3-4B-instruct-test3-for-4b-simple-results.jsonl  test1.json  test2.json  test3-for-4b-simple.json  test3-for-4b.json  test3.json
templates/: index.html
templates/fragments/: note_detail.html  note_list.html  search_results.html  settings.html  upload_success.html
tests/: __init__.py  conftest.py  test_auth.py  test_notes.py  test_notes_advanced.py  test_search.py  test_sse_flow.py
(+10 files in other folders)
