[project]
name = "scribe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.4",
    "faster-whisper>=1.2.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.21",
    "sentence-transformers>=5.2.0",
    "sqlite-vec>=0.1.6",
    "uvicorn>=0.38.0",
]
