[project]
name = "scribe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "av>=16.0.1",
    "fastapi>=0.124.4",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "ml-dtypes>=0.4.0",
    "nemo-toolkit[asr]>=2.6.0",
    "onnx<1.17.0",
    "python-multipart>=0.0.21",
    "sentence-transformers>=5.2.0",
    "sqlite-vec>=0.1.6",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "uvicorn>=0.38.0",
]
